-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 14.0.1, Qt Creator 14.0.2
-
None
-
-
9da522ad8 (15.0), 14b5c86a8 (17.0)
Steps to reproduce:
- Install with online installer (--staging-commercial) Qt Creator 14.0.2, some Qt, e.g Qt6.7.3, CMake, Ninja
- Start Creator with clean settings: ./Qt\ Creator -tcs
- Open a project, e.g Coffee Machine from Qt6.7.3 examples
- -> There's a warning seen in Configure Project page for the Kit "CMake Tool is unconfigured, CMake generator will be ignored"
- Click "Configure Project"
- -> Issues view show "The Kit need to define a CMake tool to parse this project"
- Close project and Creator
- Start Creator again with -tcs and open the same project
- -> Issue gone now
- I was only able to reproduce on macOS and only once after installing everything
- relates to
-
QTCREATORBUG-32967 [cmake] snap-installed cmake not usable: "Version not parsable"
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-31624 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
594310,2 | CMakePM: Retry fetching of capabilities upon CMake crash | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
645771,8 | CMakePM: Increase timeout 'cmake -E capabilities' to 5 seconds | 17.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |