CMakePM: Retry fetching of capabilities upon CMake crash

In the rare case when "cmake -E capabilities" crashes / fails to run,
allow to try again.

Fixes: QTCREATORBUG-31624
Change-Id: Iab44b8d12d473fbe7f20b601af88fb58932e2df9
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>